--- a/app/views/end_users/show.html.erb
+++ b/app/views/end_users/show.html.erb
@@ -110,4 +110,5 @@
     <% end %>
   </div>
 </div>
-<%= render "shared/footer_user" %>
+<!-- 9/23マージ後フッターのリンク訂正 -->
+<%= render "shared/footer_user_after_login" %>
