--- a/app/views/order_histories/confirm.html.erb
+++ b/app/views/order_histories/confirm.html.erb
@@ -22,7 +22,7 @@
             <p class="cart-item-number">数量　<%= cart_item.product_number %></p>
           </div>
           <div class="cart-item-price-box">
-            <p class="cart-item-headline">価格　¥<%= number_to_currency(cart_item.product.price * cart_item.product_number * 1.08.to_i) %>(税込)</p>
+            <p class="cart-item-headline">価格　<%= number_to_currency(cart_item.product.price * cart_item.product_number * 1.08) %>(税込)</p>
           </div>
         </div>
       </div>
@@ -72,10 +72,10 @@
     <% @cart_items.each do |cart_item| %>
       <%  @subtotal += (cart_item.product.price * cart_item.product_number) %>
     <% end %>
-    <p>小計　¥<%= number_to_currency(@subtotal) %></p>
-    <p>税   ¥<%= number_to_currency((@subtotal * 0.08).to_i) %></p>
-    <p>配送料   ¥<%= 500 %></p>
-    <p>合計 ¥<%= number_to_currency((@subtotal * 1.08 + 500).to_i)  %></p>
+    <p>小計　<%= number_to_currency(@subtotal) %></p>
+    <p>税   <%= number_to_currency(@subtotal * 0.08) %></p>
+    <p>配送料   <%= "500円" %></p>
+    <p>合計 <%= number_to_currency(@subtotal * 1.08 + 500)  %></p>
 
   <%= form.submit '注文確定' %>
   <% end %>
@@ -92,6 +92,9 @@
     </div>
   </div>
   <% end %>
+
+  <%= link_to 'カートの内容を編集する' , cart_items_path %>
+
 </div>
 
 <!-- フッター -->
