--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -27,7 +27,7 @@
 			<p><%= product.artist_name %></p>
         </div>
         <div style="height: 30px;">
-			<p><%= number_to_currency(product.price * 1.08) %>(税込み)</p>
+			<p><%= number_to_currency(product.price * 1.08) %>(税込)</p>
 		</div>
 		</div>
     </div>
