--- a/app/views/shared/_header_admin_after_login.html.erb
+++ b/app/views/shared/_header_admin_after_login.html.erb
@@ -2,7 +2,7 @@
 <header class="container-fluid page-header">
 	<div class="row row-eq-height">
 		<div class="col-xs-3 height-100">
-			<%= link_to image_tag('logo.png', :size => '250x100'), root_path %>
+			<%= link_to image_tag('logo.png', :size => '250x100'), admin_root_path %>
 		</div>
 		<div class=" col-xs-4">
             <div class="col-xs-4">
