--- a/app/assets/stylesheets/order_histories.scss
+++ b/app/assets/stylesheets/order_histories.scss
@@ -68,6 +68,7 @@
 
 .new-address {
   border: solid 1px #000000;
+  padding: 20px 20px;
   margin: 10px 20px;
 }
 
@@ -75,6 +76,10 @@
   padding: 20px 40px 100px 40px;
 }
 
+/* order_histories/confirm */
+ .accounting-display {
+  border: solid 1px #000000;
+ }
 
 
 
