--- a/app/views/order_histories/confirm.html.erb
+++ b/app/views/order_histories/confirm.html.erb
@@ -4,7 +4,7 @@
 <div class="col-xs-1">
 </div>
 
-<div class="col-xs-9">
+<div class="col-xs-8">
   <h1 class="title">ご注文内容の確認</h1>
     <% @cart_items.each do |cart_item| %>
       <div class="row cart-contents">
@@ -57,11 +57,14 @@
       <%= @order_history.pay_method_i18n %>
       <!-- enumでデータを持って来る場合の表記。@order_history.pay_methodでnewページで入力したpay_methodを持って来る -->
       <%= form.hidden_field :pay_method, {value: @order_history.pay_method} %>
+      <!-- @address_infoがidなのかaddress新規登録なのかを見分けてaddressをend_userに紐づけて新規登録するか判断するために、hidden_fieldで拾ってくる -->
+      <%= form.hidden_field :selected_order_histories_address_id, value: @address_info %>
     </div>
 
 </div>
 
-  <div class="col-xs-2">
+
+  <div class="col-xs-2 accounting-display">
     <p>商品の小計</p>
     <% @subtotal = 0 %>
     <% @cart_items.each do |cart_item| %>
@@ -72,7 +75,7 @@
     <p>配送料   <%= "500円" %></p>
     <p>合計 <%= number_to_currency(@subtotal * 1.08 + 500)  %></p>
 
-  <%= form.submit '注文確定' %>
+  <%= form.submit '注文確定', class: "btn btn-success" %>
   <% end %>
 
   <%= form_with model: @order_history, url: new_order_history_path, local: true do |form| %>
@@ -83,12 +86,14 @@
     <%= form.hidden_field :pay_method %>
     <%= form.hidden_field :selected_order_histories_address_id, value: @address_info %>
     <div class="actions">
-      <%= form.submit '戻る', name: 'back' %>
+      <%= form.submit '配送先を編集する', name: 'back', class: "btn btn-info" %>
     </div>
-  </div>
   <% end %>
+  <%= link_to 'ご注文内容を編集する' , cart_items_path, class: "btn btn-info" %>
+  </div>
 
-  <%= link_to 'カートの内容を編集する' , cart_items_path %>
+  <div class="col-xs-1">
+  </div>
 
 </div>
 
