--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.kakomi {
+	 margin: 1px;
+	 width: 75%;
+	 border: 5px dotted #f09199;
+	 background-color: #fff;
+	 text-align: center;
+	 line-height: 40px;
+}
+
+.kakomi p {
+	margin-bottom: 0px;
+}
