--- a/app/views/end_users/registrations/new.html.erb
+++ b/app/views/end_users/registrations/new.html.erb
@@ -77,7 +77,7 @@
       </div>
     <% end %>
 
-    <%= render "devise/shared/links" %>
+    <%= render "end_users/shared/links" %>
   </div>
 </div>
 <%= render "shared/footer_user_before_login" %>
