--- a/app/views/shared/_footer_admin.html.erb
+++ b/app/views/shared/_footer_admin.html.erb
@@ -4,7 +4,9 @@
 		<div class="row">
 			<div class="col-xs-4"></div>
 			<div class="col-xs-4">
-				<%= link_to image_tag('logo.png', :size => '250x100'), admin_root_path %> <!-- ロゴ表示 -->
+        <div style="height: 100; width: 250px; margin: 0 auto;">
+				  <%= link_to image_tag('logo.png', :size => '250x100'), admin_root_path %> <!-- ロゴ表示 -->
+        </div>
 			</div>
 			<div class="col-xs-4"></div>
 	    </div>
