--- a/app/views/shared/_footer_user_before_login.html.erb
+++ b/app/views/shared/_footer_user_before_login.html.erb
@@ -3,7 +3,9 @@
 		<div class="row">
 			<div class="col-xs-4"></div>
 			<div class="col-xs-4">
-				<%= link_to image_tag('logo.png', :size => '250x100'), root_path %>
+        <div style="height: 100; width: 250px; margin: 0 auto;">
+				  <%= link_to image_tag('logo.png', :size => '250x100'), root_path %>
+        </div>
 			</div>
 			<div class="col-xs-4"></div>
 		</div>
