--- a/app/views/products/_disk_fields.html.erb
+++ b/app/views/products/_disk_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="nested-fields">
 	<div class="field">
-	<%= f.number_field :disk_number %><br>
+	<%= f.number_field :disk_number, :value => "" %><br>
 	<%= link_to_remove_association "行削除", f, class: 'btn btn-danger', role: 'button' %>
 	</div>
 	<div class="field">
