--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,14 +12,14 @@
   <% end %>
 
 <% @products.each do |product| %>
-<%= link_to product_path(product.id), :style => "color: black;" do %>
+<%= link_to product_path(product.id), :style => "color: black; text-decoration: none;" do %>
 <div style="width: 250px; border: 1px solid black; margin: 5px; display: inline-block; text-align: center;">
 
 	<div style="height: 200px; line-height: 200px;">
 		<% if product.stock(product.id) == 0 %>
 		<%= image_tag "soldout.png", size: "190x190" %>
 		<% else %>
-		<%= image_tag product.image_id.url %>
+		<%= image_tag product.image_id.url, size: "190x190" %>
 		<% end %>
 	</div>
 
