--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,22 +87,7 @@
 }
 
 /* フッター */
-html {
-  min-height: 100%;
-  position: relative;
-}
-body {
-  margin-bottom: 100px;
-}
 
-footer{
-  bottom: 0;
-  margin-bottom: 0;
-  width: 100%;
-  height: 100px;
-  background-color: #fff;
-  position: absolute;
-  }
 
 .test{
   border-bottom: 1px solid #DCDCDC;
@@ -111,5 +96,8 @@ footer{
   border-bottom: none;
 }
 
-
+.row-eq-height {
+    display: flex;
+    flex-wrap: wrap;
+}
 
