--- a/app/views/shared/_header_user_before_login.html.erb
+++ b/app/views/shared/_header_user_before_login.html.erb
@@ -1,6 +1,6 @@
 
 <header class="page-header">
-	<div class="container-fluid border-bottom">
+	<div class="container-fluid" style="height:100px;">
 		<div class="row col-xs-4">
 				<%= link_to image_tag('logo.png', :size => '250x100'), root_path %> <!-- ロゴ表示 -->
 			</div>
