--- a/app/views/shared/_header_admin_after_login.html.erb
+++ b/app/views/shared/_header_admin_after_login.html.erb
@@ -6,10 +6,10 @@
 		</div>
 		<div class="col-xs-4" style="height:100px;">
             <div class="col-xs-4">
-            	<div class="searchbox" style="padding-top: 30px ;">
+            	<div class="searchbox" style="padding-top: 30px;width:100%;">
 			    	<%= search_form_for @q, url: admin_root_path do |f| %>
 			    	<%= f.text_field :cd_name_cont,placeholder: '検索する商品名を入力...' %>
-                    <%= f.submit %>
+                    <%= f.submit :class =>'search-btn' %>
 			    </div>
             <% end %>
 		    </div>
