--- a/app/views/shared/_header_user_before_login.html.erb
+++ b/app/views/shared/_header_user_before_login.html.erb
@@ -1,30 +1,32 @@
 
-<header class="page-header">
-	<div class="container-fluid" style="height:100px;">
+<header style="height:150px;">
+	<div class="container-fluid" style="padding-top: 10px;" >
 		<div class="row col-xs-4">
 				<%= link_to image_tag('logo.png', :size => '250x100'), root_path %> <!-- ロゴ表示 -->
 			</div>
 			<div class="col-xs-4">
-				<div class="searchbox">
+				<div class="searchbox" style="margin-top: 20px; width:100%;">
 			    	<%= search_form_for @q, url: root_path do |f| %>
 			    	<%= f.text_field :cd_name_cont,placeholder: '検索する商品名を入力...' %>
-                    <%= f.submit %>
+                    <%= f.submit :class =>'search-btn' %>
 			    </div>
 			    <% end %>
 			</div>
 			<div class="col-xs-4">
-				<div class="row">
-				  <div class="col-xs-6">
-					 <%= link_to new_end_user_registration_path do %>
-					 <i class="fas fa-user-plus fa-2x"></i>新規登録
-					 <% end %>
-				  </div>
-				  <div class="col-xs-6">
-					 <%= link_to new_end_user_session_path do %>
-					 <i class="fas fa-sign-in-alt fa-2x"></i>ログイン
-					 <% end %>
-				  </div>
-				</div>
+				<div style="margin-top: 20px;">
+				    <div class="row">
+				        <div class="col-xs-6">
+					        <%= link_to new_end_user_registration_path do %>
+					        <i class="fas fa-user-plus fa-2x"></i>新規登録
+					        <% end %>
+				        </div>
+				        <div class="col-xs-6">
+					        <%= link_to new_end_user_session_path do %>
+					        <i class="fas fa-sign-in-alt fa-2x"></i>ログイン
+					        <% end %>
+				        </div>
+				    </div>
+			    </div>
 			</div>
 	</div>
 </header><!-- /header -->
