--- a/app/views/shared/_header_user_after_login.html.erb
+++ b/app/views/shared/_header_user_after_login.html.erb
@@ -1,13 +1,13 @@
-<header class="page-header">
-	<div class="container-fluid">
+<header style="height:150px;">
+	<div class="container-fluid" style="padding-top: 10px;">
 			<div class="row col-xs-3">
 				<%= link_to image_tag('logo.png', :size => '250x100'), root_path %>
 			</div>
 			<div class="row col-xs-4">
-			    <div class="searchbox" style="margin-top: 20px;">
+			    <div class="searchbox" style="margin-top: 25px; width:100%;">
 			    	<%= search_form_for @q, url: root_path do |f| %>
 			    	<%= f.text_field :cd_name_cont,placeholder: '検索する商品名を入力...' %>
-                    <%= f.submit %>
+                    <%= f.submit :class =>'search-btn' %>
 			    </div>
             <% end %>
             </div>
